investigated how to get email to stop overflowing on small viewports

--- a/src/components/pages/Contact/style.css
+++ b/src/components/pages/Contact/style.css
@@ -7,3 +7,11 @@
 .wrapThis {
     overflow-wrap: break-word !important;
 }
+
+.hideThis {
+    overflow: hidden;
+}
+
+a{
+    overflow: hidden !important;
+}
